refactor: Miscellaneous refactoring
#23